--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,9 @@
   padding: 0;
   box-sizing: border-box; }
 
-body {
-  font-family: sans-serif; }
-
 .header {
   background-color: #110a6e;
-  height: 80px;
+  height: 130px;
   position: fixed;
   width: 100%;
   top: 0;
@@ -107,8 +104,8 @@ body {
     justify-content: center; }
     .caja img {
       margin-top: 150px;
-      width: 350px;
-      height: 350px; }
+      width: 290px;
+      height: 290px; }
     .caja .tituloMarba {
       text-align: center;
       font-size: 70px;
@@ -182,7 +179,7 @@ body {
     background-image: linear-gradient(to right, #09094e, #0f0e0e);
     margin-top: 50px;
     color: white;
-    height: 1400px;
+    height: 1800px;
     margin-bottom: 50px; }
     .caja-quienesSomos h1 {
       text-align: center;
@@ -195,10 +192,172 @@ body {
       font-family: 'Koulen', cursive;
       font-size: 1.1rem; } }
 
+@media (min-width: 769px) and (max-width: 2600px) {
+  .header {
+    background-color: #110a6e;
+    height: 130px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0; }
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 992px;
+    margin: 0 auto; }
+  .nav-link {
+    color: white;
+    text-decoration: none; }
+  .logo img {
+    width: 80px;
+    height: 80px;
+    line-height: 80px; }
+  .nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none; }
+  .nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px;
+    text-transform: uppercase;
+    width: max-content; }
+  .nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 3px; }
+  .nav-menu-link:hover,
+  .nav-menu-link_active {
+    background-color: #034574;
+    transition: 0.5s; }
+  .nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
+    cursor: pointer;
+    display: none; }
+  .caja {
+    width: 100%;
+    height: 1000px;
+    background-image: linear-gradient(rgba(42, 42, 194, 0.9), #000101), url("https://www.datos101.com/wp-content/uploads/2017/07/google-cloud-datacenter-2-990x660.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center; }
+    .caja img {
+      margin-top: 150px;
+      width: 450px;
+      height: 450px;
+      padding-top: 70px; }
+    .caja .tituloMarba {
+      text-align: center;
+      font-size: 70px;
+      color: white;
+      font-family: 'Bebas Neue', cursive; }
+    .caja .subtitulo {
+      text-align: center;
+      color: white; }
+    .caja button {
+      align-items: center; }
+  .datacenter {
+    margin-top: 70px; }
+    .datacenter .tituloServicios {
+      font-family: 'Bebas Neue', cursive;
+      padding-left: 65px;
+      font-size: 3rem;
+      margin: 5px 5px 5px 5px; }
+    .datacenter img {
+      padding: 10px 15px 10px 65px;
+      width: 600px;
+      height: 400px;
+      border-radius: 7px;
+      float: left; }
+    .datacenter .parrafo {
+      margin-top: 7px;
+      padding: 5px 20px 10px 20px;
+      font-size: 1.6rem;
+      width: 100%;
+      font-family: 'Koulen', cursive; }
+    .datacenter #botonData {
+      font-size: 1.7rem;
+      font-family: 'Koulen', cursive;
+      padding-left: 65px; }
+    .datacenter #botonData:hover {
+      background-color: #3023e2; }
+  .infraestructuraIndustria {
+    margin-top: 40px;
+    background-image: linear-gradient(to right, #09094e, #0f0e0e);
+    color: white; }
+    .infraestructuraIndustria .tituloServicios {
+      margin-top: 70px;
+      text-align: center;
+      font-size: 40px;
+      padding-top: 30px;
+      font-family: 'Bebas Neue', cursive;
+      padding-left: 500px; }
+    .infraestructuraIndustria img {
+      padding: 10px 15px 10px 15px;
+      width: 600px;
+      height: 300px;
+      border-radius: 7px;
+      float: right; }
+    .infraestructuraIndustria .parrafo {
+      text-align: center;
+      margin-top: 7px;
+      font-size: 1.6rem;
+      padding: 5px 25px 5px 25px;
+      font-family: 'Koulen', cursive; }
+    .infraestructuraIndustria #botonData {
+      font-size: 1.3rem;
+      font-family: 'Koulen', cursive;
+      background-image: linear-gradient(to right, #09094e, #0f0e0e);
+      color: white; }
+  .ingenieriaConsultoria {
+    margin-top: 70px; }
+    .ingenieriaConsultoria .tituloServicios {
+      font-family: 'Bebas Neue', cursive;
+      padding-left: 65px;
+      font-size: 3rem;
+      margin: 5px 5px 5px 5px; }
+    .ingenieriaConsultoria img {
+      padding: 10px 15px 10px 65px;
+      width: 600px;
+      height: 400px;
+      border-radius: 7px;
+      float: left; }
+    .ingenieriaConsultoria .parrafo {
+      margin-top: 7px;
+      padding: 5px 20px 10px 20px;
+      font-size: 1.6rem;
+      width: 100%;
+      font-family: 'Koulen', cursive; }
+    .ingenieriaConsultoria #botonData {
+      font-size: 1.7rem;
+      font-family: 'Koulen', cursive;
+      padding-left: 65px; }
+    .ingenieriaConsultoria #botonData:hover {
+      background-color: #3023e2; }
+  .caja-quienesSomos {
+    background-image: linear-gradient(to right, #09094e, #0f0e0e);
+    margin-top: 150px;
+    color: white;
+    height: 1500px;
+    margin-bottom: 50px;
+    padding: 70px 60px 40px 60px; }
+    .caja-quienesSomos h1 {
+      margin-top: 100px;
+      font-family: 'Bebas Neue', cursive; }
+    .caja-quienesSomos p {
+      text-align: left;
+      padding: 50px 40px 25px 30px;
+      font-family: 'Koulen', cursive;
+      font-size: 1.2rem; } }
+
 footer {
-  color: white;
-  /* CONTACT INFO */
-  /* LARGE SIZE */ }
+  color: white; }
   footer .container {
     max-width: 1170px;
     margin-left: auto;
