--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -14,7 +14,7 @@ $color: #656565;
 // ! Global ********************************************
 
 .header {
-  background-color: #110a6e;
+  background-color: #130f64;
   height: 130px;
   position: fixed;
   width: 100%;
@@ -303,7 +303,7 @@ $color: #656565;
    
     
     .header {
-      background-color: #110a6e;
+      background-color: #171070;
       height: 130px;
       position: fixed;
       width: 100%;
