--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box; }
 
 .header {
-  background-color: #110a6e;
+  background-color: #130f64;
   height: 130px;
   position: fixed;
   width: 100%;
@@ -72,7 +72,7 @@
       flex-direction: column;
       align-items: center;
       margin: 0;
-      background-color: #282a3d;
+      background-image: linear-gradient(rgba(0.2,0.4,0.5,0.8),rgba(0.3,0.5,0.8,8));
       position: fixed;
       top: 60px;
       width: 100%;
@@ -80,7 +80,10 @@
       height: calc(100% - 60px);
       overflow-y: auto;
       left: 100%;
-      transition: left 0.3s; }
+      height: 500px;
+      transition: left 0.3s;
+
+     }
     .header .nav-menu-item {
       line-height: 70px; }
     .header .nav-menu-link:hover,
@@ -194,7 +197,7 @@
 
 @media (min-width: 769px) and (max-width: 2600px) {
   .header {
-    background-color: #110a6e;
+    background-color: #171070;
     height: 130px;
     position: fixed;
     width: 100%;
@@ -261,7 +264,9 @@
       text-align: center;
       color: white; }
     .caja button {
-      align-items: center; }
+      align-items: center;
+      }
+     
   .datacenter {
     margin-top: 70px; }
     .datacenter .tituloServicios {
@@ -287,8 +292,14 @@
       padding-left: 65px; }
     .datacenter #botonData:hover {
       background-color: #3023e2; }
+      #botonMasInfo{
+        font-size: 1.3rem;
+        font-family: 'Koulen', cursive;
+        
+      }
   .infraestructuraIndustria {
     margin-top: 40px;
+    padding-top: 30px;
     background-image: linear-gradient(to right, #09094e, #0f0e0e);
     color: white; }
     .infraestructuraIndustria .tituloServicios {
