--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -20,6 +20,7 @@ $color: #656565;
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
   
 }
 .nav {
@@ -87,10 +88,12 @@ $color: #656565;
 @media (max-width: 768px) {
   body {
     padding-top: 70px;
+    
   }
 
   .header {
     height: 60px;
+    z-index: 1;
     .logo {
         font-size: 25px;
         padding: 0 20px;
@@ -101,7 +104,8 @@ $color: #656565;
         flex-direction: column;
         align-items: center;
         margin: 0;
-        background-color: #282a3d;
+        background-image: linear-gradient(rgba(0.2,0.4,0.5,0.8),rgba(0.3,0.5,0.8,8));
+        height: 500px;
         position: fixed;
         top: 60px;
         width: 100%;
@@ -285,7 +289,79 @@ $color: #656565;
         }
     }
 
-   
+     // slider
+
+     .titulo-slider{
+      text-align: center;
+      font-size: 2.5rem;
+      font-family: 'Bebas Neue', cursive;
+    }
+  
+    .subtitulo-slider{
+      text-align: center;
+      font-family: 'Koulen', cursive;
+    }
+  
+  
+   .botonSlider{
+     padding-top: 30px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     a{
+       border: 3px solid black;
+       text-decoration: none;
+       font-size: 1.5rem;
+       padding: 10px 10px 10px 10px;
+       text-align: center;
+       align-items: center;
+       font-family: 'Bebas Neue', cursive;
+       color: #000;
+       background-color: #c1d8e9;
+     }
+     a:hover{
+      background-color: #0d0da0;
+    }
+   }
+
+  .slider{
+    width: 75vw;
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+    padding-top: 50px;
+    
+    .slide-track{
+      display: flex;
+      
+      animation: scroll 40s linear infinite;
+      -webkit-animation:scroll 30s linear infinite ;
+      width: calc(200px * 10);
+     
+    }
+    .slide{
+      width: 300px;
+      display: flex;
+      img{
+        width: 100%;
+      }
+    }
+
+    @keyframes scroll {
+        0%{
+          -webkit-animation: translateX(0);
+          transform: translateX(0);
+        }
+        100%{
+          -webkit-animation: translateX(calc(-300px * 5));
+          transform: translateX(calc(-300px * 5));
+        }
+    }
+
+
+  }
+
+  //  ! Fin de media smartphones
 }
 
 // ! **********************************************
@@ -309,6 +385,7 @@ $color: #656565;
       width: 100%;
       top: 0;
       left: 0;
+      z-index: 1;
       
     }
     .nav {
@@ -440,16 +517,23 @@ $color: #656565;
           font-size: 1.7rem;
           font-family: 'Koulen', cursive;
           padding-left: 65px;
+          
       }
       #botonData:hover{
           background-color: #3023e2;
          
           
       }
+      #botonMasInfo{
+        font-size: 1.3rem;
+          font-family: 'Koulen', cursive;
+      }
+      
     }
 
     .infraestructuraIndustria{
       margin-top: 40px;
+      padding-top: 30px;
       background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
       color: white;
       
@@ -483,6 +567,10 @@ $color: #656565;
         font-family: 'Koulen', cursive;
         background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
         color: white;
+    }
+    #botonMasInfo{
+      font-size: 1.3rem;
+        font-family: 'Koulen', cursive;
     }
  
   }
@@ -526,6 +614,10 @@ $color: #656565;
        
         
     }
+    #botonMasInfo{
+      font-size: 1.3rem;
+        font-family: 'Koulen', cursive;
+    }
   }
   
 
@@ -552,7 +644,84 @@ $color: #656565;
           
       }
   }
+  
+  // slider
+
+  .titulo-slider{
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: 'Bebas Neue', cursive;
   }
+
+  .subtitulo-slider{
+    text-align: center;
+    font-family: 'Koulen', cursive;
+  }
+
+
+ .botonSlider{
+   padding-top: 30px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   a{
+     border: 3px solid black;
+     text-decoration: none;
+     font-size: 1.5rem;
+     padding: 10px 10px 10px 10px;
+     text-align: center;
+     align-items: center;
+     font-family: 'Bebas Neue', cursive;
+     color: #000;
+     background-color: #c1d8e9;
+   }
+   a:hover{
+    background-color: #0d0da0;
+  }
+ }
+  
+
+  .slider{
+    width: 75vw;
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+    padding-top: 50px;
+    
+    .slide-track{
+      display: flex;
+      
+      animation: scroll 30s linear infinite;
+      -webkit-animation:scroll 30s linear infinite ;
+      width: calc(200px * 10);
+     
+    }
+    .slide{
+      width: 300px;
+      display: flex;
+      img{
+        width: 100%;
+      }
+    }
+
+    @keyframes scroll {
+        0%{
+          -webkit-animation: translateX(0);
+          transform: translateX(0);
+        }
+        100%{
+          -webkit-animation: translateX(calc(-300px * 5));
+          transform: translateX(calc(-300px * 5));
+        }
+    }
+
+
+  }
+
+// ! fin de media tablet desktop
+}
+
+
 
 
 
