--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -204,6 +204,10 @@ $color: #656565;
             font-size: 1.3rem;
             font-family: 'Koulen', cursive;
         }
+        #botonMasInfo{
+          font-size: 1rem;
+            font-family: 'Koulen', cursive;
+        }
       }
 
       .infraestructuraIndustria{
@@ -234,6 +238,10 @@ $color: #656565;
           font-size: 1.3rem;
           font-family: 'Koulen', cursive;
       }
+      #botonMasInfo{
+        font-size: 1rem;
+          font-family: 'Koulen', cursive;
+      }
     }
 
     .ingenieriaConsultoria{
@@ -262,6 +270,10 @@ $color: #656565;
       }
       #botonData{
           font-size: 1.3rem;
+          font-family: 'Koulen', cursive;
+      }
+      #botonMasInfo{
+        font-size: 1rem;
           font-family: 'Koulen', cursive;
       }
     }
