--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,9 @@
     display: flex;
     justify-content: center; }
     .caja img {
-      margin-top: 150px;
-      width: 290px;
-      height: 290px; }
+      margin-top: 100px;
+      width: 260px;
+      height: 260px; }
     .caja .tituloMarba {
       text-align: center;
       font-size: 70px;
@@ -127,7 +127,9 @@
       font-size: 40px;
       margin: 5px 5px 5px 5px; }
     .datacenter img {
-      padding: 10px 15px 10px 15px; }
+      background-image: url(/imagenes/datacenter.jpg);
+      background-size: cover;
+      animation: animate 2s infinite; }
     .datacenter .parrafo {
       text-align: center;
       margin-top: 7px;
@@ -236,7 +238,6 @@
     .slider .slide-track {
       display: flex;
       animation: scroll 40s linear infinite;
-      -webkit-animation: scroll 30s linear infinite;
       width: calc(200px * 10); }
     .slider .slide {
       width: 300px;
@@ -245,10 +246,8 @@
         width: 100%; }
   @keyframes scroll {
     0% {
-      -webkit-animation: translateX(0);
       transform: translateX(0); }
     100% {
-      -webkit-animation: translateX(calc(-300px * 5));
       transform: translateX(calc(-300px * 5)); } } }
 
 @media (min-width: 769px) and (max-width: 2600px) {
