--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -8,13 +8,13 @@
 
 }
 
-// variables
-$color: #656565;
+
+
 
 // ! Global ********************************************
 
 .header {
-  background-color: #130f64;
+  background-color: #120e83;
   height: 130px;
   position: fixed;
   width: 100%;
@@ -81,7 +81,52 @@ $color: #656565;
   display: none;
 }
 
+//! slider 
 
+.container{
+  padding-top: 150px;
+  padding-bottom: 200px;
+}
+h2{
+  text-align: center;
+  padding: 20px;
+}
+.slick-slide{
+  margin: 0 20px;
+}
+.slick-slide img{
+  width: 100%;
+}
+.slick-slider{
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+}
+.slick-list{
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-track{
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block
+}
+.slick-slide{
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+.slick-slide img{
+  display: block;
+}
+.slick-initialized .slick-slide{
+  display: block;
+}
 
 
 /* MOBILE */
@@ -290,7 +335,7 @@ $color: #656565;
         background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
         margin-top: 50px;
         color: white;
-        height: 1800px;
+        height: 2300px;
         margin-bottom: 50px;
         
         h1{
@@ -303,7 +348,7 @@ $color: #656565;
             text-align: center;
             padding: 10px 20px 5px 20px;
             font-family: 'Koulen', cursive;
-            font-size: 1.1rem;
+            font-size: 1rem;
         }
     }
 
@@ -390,13 +435,7 @@ $color: #656565;
   @media  (min-width:769px) and (max-width:2600px) {
    
 
-
-
-
-    // header 
-         
-   
-    
+ // header 
     .header {
       background-color: #171070;
       height: 130px;
@@ -645,7 +684,7 @@ $color: #656565;
       background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
       margin-top: 150px;
       color: white;
-      height: 1500px;
+      height: 3000px;
       margin-bottom: 50px;
       padding: 70px 60px 40px 60px;
       
@@ -747,7 +786,33 @@ $color: #656565;
 
 
 
+//! adaptando textos a mobile
 
+@media screen and (min-width:120px) and (max-width:600px){
+    
+
+  .caja-quienesSomos{
+    background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
+    margin-top: 50px;
+    color: white;
+    height: 3600px;
+    margin-bottom: 50px;
+    
+    h1{
+        text-align: center;
+        font-size: 40px;
+        padding: 25px 0 10px 0;
+        font-family: 'Bebas Neue', cursive;
+    }
+    p{
+        text-align: center;
+        padding: 10px 20px 5px 20px;
+        font-family: 'Koulen', cursive;
+        font-size: 15px;
+    }
+}  
+
+}
 
 
  
