--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box; }
 
 .header {
-  background-color: #130f64;
+  background-color: #120e83;
   height: 130px;
   position: fixed;
   width: 100%;
@@ -59,38 +59,50 @@
   cursor: pointer;
   display: none; }
 
-  .cajaPositiva{
-    background-color: #0ba53e;
-    width: 400px;
-    border: #000 solid 2px;
-    margin-left: 50px;
-    height: 400px;
-  }
+.container {
+  padding-top: 150px;
+  padding-bottom: 200px; }
 
-  .cajaPositiva li{
-    font-size: 1.3rem;
-  }
+h2 {
+  text-align: center;
+  padding: 20px; }
 
-  .cajaNegativa{
-    background-color: #c4210c;
-    width: 400px;
-    border: #000 solid 2px;
-    margin-left: 50px;
-    height: 400px;
-  }
+.slick-slide {
+  margin: 0 20px; }
 
-  .cajaNegativa li{
-    font-size: 1.3rem;
-  }
+.slick-slide img {
+  width: 100%; }
 
-  .foda{
-    display: flex;
-    justify-content: space-around;
-  }
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box; }
 
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0; }
 
-  
- 
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block; }
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px; }
+
+.slick-slide img {
+  display: block; }
+
+.slick-initialized .slick-slide {
+  display: block; }
+
 /* MOBILE */
 @media (max-width: 768px) {
   body {
@@ -225,7 +237,7 @@
     background-image: linear-gradient(to right, #09094e, #0f0e0e);
     margin-top: 50px;
     color: white;
-    height: 1800px;
+    height: 2300px;
     margin-bottom: 50px; }
     .caja-quienesSomos h1 {
       text-align: center;
@@ -236,7 +248,7 @@
       text-align: center;
       padding: 10px 20px 5px 20px;
       font-family: 'Koulen', cursive;
-      font-size: 1.1rem; }
+      font-size: 1rem; }
   .titulo-slider {
     text-align: center;
     font-size: 2.5rem;
@@ -445,7 +457,7 @@
     background-image: linear-gradient(to right, #09094e, #0f0e0e);
     margin-top: 150px;
     color: white;
-    height: 2500px;
+    height: 3000px;
     margin-bottom: 50px;
     padding: 70px 60px 40px 60px; }
     .caja-quienesSomos h1 {
@@ -503,6 +515,24 @@
     100% {
       -webkit-animation: translateX(calc(-300px * 5));
       transform: translateX(calc(-300px * 5)); } } }
+
+@media screen and (min-width: 120px) and (max-width: 600px) {
+  .caja-quienesSomos {
+    background-image: linear-gradient(to right, #09094e, #0f0e0e);
+    margin-top: 50px;
+    color: white;
+    height: 3600px;
+    margin-bottom: 50px; }
+    .caja-quienesSomos h1 {
+      text-align: center;
+      font-size: 40px;
+      padding: 25px 0 10px 0;
+      font-family: 'Bebas Neue', cursive; }
+    .caja-quienesSomos p {
+      text-align: center;
+      padding: 10px 20px 5px 20px;
+      font-family: 'Koulen', cursive;
+      font-size: 15px; } }
 
 footer {
   color: white; }
