--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -336,7 +336,7 @@ h2{
        
         margin-top: 50px;
         color: white;
-        height: 2300px;
+        height: 1800px;
         margin-bottom: 50px;
         
         h1{
@@ -685,9 +685,9 @@ h2{
       background-image: linear-gradient(to right , rgb(9, 9, 78), rgb(15, 14, 14));
       margin-top: 150px;
       color: white;
-      height: 3000px;
+      // height: 3000px;
       margin-bottom: 50px;
-      padding: 70px 60px 40px 60px;
+      padding: 20px;
       
       h1{
           margin-top: 100px;
